--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "module": "index.js",
   "description": "",
   "scripts": {
+    "start":"nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
